--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -65,6 +65,77 @@
     ],
     "downloadToGet": "{{plan}} पाने के लिए डाउनलोड करें"
   },
+  "faq": {
+    "heading": "अक्सर पूछे जाने वाले प्रश्न",
+    "description": "Voca के बारे में वह सब कुछ जो आपको जानना चाहिए।",
+    "cta": "आपका सवाल यहाँ नहीं है?",
+    "items": [
+      {
+        "question": "क्या यह मुफ्त है?",
+        "answer": [
+          "हर प्लान 3 दिन की मुफ्त ट्रायल के साथ शुरू होता है — सभी सुविधाएँ, कोई प्रतिबंध नहीं। कोई भी प्लान चुनें, बिना जोखिम आज़माएँ और कभी भी रद्द करें।",
+          "ट्रायल के बाद प्लान सिर्फ $3/महीना से शुरू होते हैं। कोई छुपी फीस नहीं, कोई आश्चर्यजनक बिल नहीं। जो दिखता है वही भुगतान करें।",
+          "प्रतियोगी ~$8/महीना के साथ अतिरिक्त API key शुल्क लेते हैं। Voca में सब कुछ एक सदस्यता में शामिल है।"
+        ]
+      },
+      {
+        "question": "क्या मैं कभी भी रद्द कर सकता हूँ?",
+        "answer": [
+          "हाँ। जब चाहें रद्द करें — आपकी वर्तमान अवधि सक्रिय रहती है और अगला महीना बस रिन्यू नहीं होता।",
+          "कोई रद्दीकरण शुल्क नहीं, कोई छुपी शर्तें नहीं, कोई जटिल प्रक्रिया नहीं। एक क्लिक और बस।",
+          "सब कुछ ओपन सोर्स है। आप हमारी बिलिंग, कोड और वादों को सत्यापित कर सकते हैं — कुछ भी छुपा नहीं है।"
+        ]
+      },
+      {
+        "question": "Voca को अलग क्या बनाता है?",
+        "answer": [
+          "वास्तविक वातावरण के लिए बना बैकग्राउंड नॉइज़ कैंसलेशन — खासकर शोरगुल वाली जगहों में कोड लिखने वाले डेवलपर्स के लिए।",
+          "AI जो फंक्शन नाम, कोड टर्म्स और तकनीकी जार्गन पहचानता है और अनुमान लगाने की बजाय सही ट्रांसक्राइब करता है।",
+          "स्मार्ट ऑटो-पेस्ट: सुधारा हुआ ट्रांसक्रिप्ट सीधे आपके कर्सर पर आता है। कॉपी-पेस्ट नहीं, ऐप स्विचिंग नहीं।",
+          "AI सिर्फ ट्रांसक्राइब नहीं करता — यह आपकी लेखन शैली सुधारता है, व्याकरण ठीक करता है और आपका टेक्स्ट आपने जो कहा उससे बेहतर बनाता है।"
+        ]
+      },
+      {
+        "question": "डेवलपर मोड क्या है?",
+        "answer": [
+          "डेवलपर मोड विशेष रूप से सॉफ्टवेयर इंजीनियरों के लिए बनाई गई टोन सेटिंग है। सक्रिय होने पर, Voca का AI कोड टर्म्स, फंक्शन नाम, लाइब्रेरी नाम और तकनीकी जार्गन को पहचानता है — और उन्हें सामान्य शब्दों की तरह नहीं, बल्कि सही ढंग से ट्रांसक्राइब करता है।",
+          "\"reakt yuz steit huk\" कहें और यह \"React useState hook\" लिखता है। \"nahbar component\" कहें और यह \"navbar component\" लिखता है।",
+          "बैकग्राउंड नॉइज़ कैंसलेशन के साथ मिलकर, यह उन डेवलपर्स के लिए बना है जो वास्तविक वातावरण में काम करते हुए कोड कमेंट्स, डॉक्यूमेंटेशन या मैसेज डिक्टेट करते हैं।"
+        ]
+      },
+      {
+        "question": "कौन सी भाषाएँ समर्थित हैं?",
+        "answer": [
+          "Deepgram और Groq इंजन के माध्यम से 35+ भाषाओं में स्पीच रिकग्निशन।",
+          "टोन कंट्रोल के साथ AI-संचालित अनुवाद से 100+ भाषाओं में अनुवाद — औपचारिक, अनौपचारिक या डेवलपर मोड।",
+          "डेवलपर मोड कोड टर्म्स और तकनीकी जार्गन को स्वचालित रूप से पहचानता है, उन्हें अंग्रेजी में रखता है और बाकी को स्वाभाविक रूप से अनुवाद करता है।"
+        ]
+      },
+      {
+        "question": "मेरा डेटा कहाँ स्टोर होता है?",
+        "answer": [
+          "आपका डेटा गोपनीयता-प्रथम दृष्टिकोण के साथ हमारे सर्वर पर प्रोसेस होता है। Voca पूरी तरह ओपन सोर्स है — आप कोड की हर लाइन खुद जाँच सकते हैं।",
+          "अगर आप नहीं चाहते कि कुछ भी हमारे सर्वर पर स्टोर हो, तो सेटिंग्स में इसे बंद कर दें। आपकी रिकॉर्डिंग और ट्रांसक्रिप्ट सेव नहीं होंगे — फैसला पूरी तरह आपका है।",
+          "कोई ट्रैकिंग नहीं, कोई एनालिटिक्स नहीं, कोई डेटा बिक्री नहीं। बस।"
+        ]
+      },
+      {
+        "question": "क्या यह ऑफलाइन काम करता है?",
+        "answer": [
+          "Voca को इंटरनेट कनेक्शन की आवश्यकता है। आपका ऑडियो हमारे सर्वर पर भेजा जाता है जहाँ हम इसे सबसे अच्छी गुणवत्ता और सबसे कम लागत पर प्रोसेस करते हैं।",
+          "हमारी क्लाउड पाइपलाइन में बैकग्राउंड नॉइज़ कैंसलेशन, AI करेक्शन, कोड-अवेयर ट्रांसक्रिप्शन और स्मार्ट ट्रांसलेशन शामिल है — किसी भी लोकल सॉल्यूशन से तेज़ और सटीक परिणाम।"
+        ]
+      },
+      {
+        "question": "क्या नई सुविधाएँ आएँगी?",
+        "answer": [
+          "बिल्कुल। Voca एक सक्रिय रूप से विकसित प्लेटफॉर्म है — हम नियमित रूप से नई सुविधाओं, सुधारों और अनुकूलन के साथ अपडेट जारी करते हैं।",
+          "आपकी प्रतिक्रिया सीधे हमारे रोडमैप को आकार देती है। कोई बग मिला या फीचर रिक्वेस्ट है? फुटर में ईमेल या सोशल लिंक से हमसे संपर्क करें — हम सब कुछ पढ़ते हैं।",
+          "सब्सक्राइब करने पर आप सिर्फ आज का प्रोडक्ट नहीं पा रहे। आप बिना किसी अतिरिक्त लागत के हर भविष्य का अपडेट भी पा रहे हैं।"
+        ]
+      }
+    ]
+  },
   "finalCta": {
     "heading": "एक की दबाएँ, बोलिए, हो गया।",
     "description": "ट्रांसक्राइब, करेक्ट, ट्रांसलेट और पेस्ट — सब एक शॉर्टकट से, बिना अपनी ऐप छोड़े। ओपन सोर्स, macOS और Windows पर काम करता है।",
@@ -74,6 +145,7 @@
   "footer": {
     "features": "सुविधाएँ",
     "pricing": "मूल्य",
+    "faq": "FAQ",
     "copyright": "© {{year}} Voca. सर्वाधिकार सुरक्षित।"
   },
   "notFound": {
