--- a/packages/web/src/i18n/locales/ja.json
+++ b/packages/web/src/i18n/locales/ja.json
@@ -65,6 +65,77 @@
     ],
     "downloadToGet": "{{plan}}を取得するためにダウンロード"
   },
+  "faq": {
+    "heading": "よくある質問",
+    "description": "Vocaについて知っておくべきすべてのこと。",
+    "cta": "質問が見つかりませんか？",
+    "items": [
+      {
+        "question": "無料ですか？",
+        "answer": [
+          "すべてのプランは3日間の無料トライアルから始まります — 全機能、制限なし。好きなプランを選んで、リスクフリーで試して、いつでもキャンセルできます。",
+          "トライアル後、プランは月額わずか$3から。隠れた料金なし、予想外の請求なし。表示価格がそのまま支払い額です。",
+          "競合他社は月額約$8に加えてAPIキー費用が別途かかります。Vocaはすべてをひとつのシンプルなサブスクに含みます。"
+        ]
+      },
+      {
+        "question": "いつでもキャンセルできますか？",
+        "answer": [
+          "はい。いつでもキャンセルできます — 現在の期間は有効のままで、翌月は更新されません。",
+          "キャンセル料なし、隠れた条件なし、面倒な引き止めプロセスなし。ワンクリックで完了。",
+          "すべてオープンソースです。請求、コード、約束を検証できます — 何も隠されていません。"
+        ]
+      },
+      {
+        "question": "Vocaの違いは何ですか？",
+        "answer": [
+          "実環境向けに設計された背景ノイズキャンセル — 騒がしい場所でコーディングする開発者に特に便利。",
+          "関数名、コード用語、技術用語を認識し、推測ではなく正確にトランスクリプトするAI。",
+          "スマートオートペースト：修正されたトランスクリプトがカーソル位置に直接挿入されます。コピペ不要、アプリ切り替え不要。",
+          "AIは単なるトランスクリプトではなく、文章スタイルを改善し、文法を修正し、実際に言ったことよりもきれいなテキストにします。"
+        ]
+      },
+      {
+        "question": "開発者モードとは？",
+        "answer": [
+          "開発者モードはソフトウェアエンジニア向けに設計されたトーン設定です。有効にすると、VocaのAIがコード用語、関数名、ライブラリ名、技術用語を認識し、通常の単語として扱わず正確にトランスクリプトします。",
+          "「reakt use state hook」と言えば「React useState hook」と書きます。「nahbar component」と言えば「navbar component」と書きます。",
+          "背景ノイズキャンセルと組み合わせて、実環境で作業しながらコードコメント、ドキュメント、メッセージを口述する開発者のために設計されています。"
+        ]
+      },
+      {
+        "question": "どの言語に対応していますか？",
+        "answer": [
+          "DeepgramとGroqエンジンによる35以上の言語の音声認識。",
+          "トーン制御付きAI翻訳で100以上の言語に対応 — フォーマル、カジュアル、開発者モード。",
+          "開発者モードはコード用語や技術用語を自動認識し、英語のまま保持しながら残りを自然に翻訳します。"
+        ]
+      },
+      {
+        "question": "データはどこに保存されますか？",
+        "answer": [
+          "データはプライバシー重視のアプローチで私たちのサーバーで処理されます。Vocaは完全にオープンソース — コードの全行をご自身で確認できます。",
+          "サーバーに何も保存したくない場合は、設定でオフにするだけです。録音やトランスクリプトは保存されません — 完全にあなたの選択です。",
+          "トラッキングなし、アナリティクスなし、データ販売なし。以上。"
+        ]
+      },
+      {
+        "question": "オフラインで動作しますか？",
+        "answer": [
+          "Vocaにはインターネット接続が必要です。音声は最高品質を最低コストで提供するためにサーバーに送信されます。",
+          "クラウドパイプラインには背景ノイズキャンセル、AI補正、コード対応トランスクリプション、スマート翻訳が含まれ、ローカルソリューションよりも高速で正確な結果を提供します。"
+        ]
+      },
+      {
+        "question": "新機能は追加されますか？",
+        "answer": [
+          "もちろんです。Vocaは活発に開発されているプラットフォームです — 新機能、改善、最適化を定期的にリリースしています。",
+          "あなたのフィードバックがロードマップを直接形作ります。バグを見つけた、または機能リクエストがありますか？フッターのメールやソーシャルリンクからお問い合わせください — すべて読んでいます。",
+          "サブスクリプションで得られるのは今日の製品だけではありません。将来のすべてのアップデートを追加費用なしで受け取れます。"
+        ]
+      }
+    ]
+  },
   "finalCta": {
     "heading": "キーを押して、話して、完了。",
     "description": "一つのショートカットで文字起こし、修正、翻訳、貼り付け — アプリを離れずに。オープンソース、macOSとWindows対応。",
@@ -74,6 +145,7 @@
   "footer": {
     "features": "機能",
     "pricing": "料金",
+    "faq": "FAQ",
     "copyright": "© {{year}} Voca. All rights reserved."
   },
   "notFound": {
