--- a/packages/web/src/i18n/locales/ru.json
+++ b/packages/web/src/i18n/locales/ru.json
@@ -65,6 +65,77 @@
     ],
     "downloadToGet": "Скачать для {{plan}}"
   },
+  "faq": {
+    "heading": "Часто задаваемые вопросы",
+    "description": "Всё, что нужно знать о Voca.",
+    "cta": "Не нашли свой вопрос?",
+    "items": [
+      {
+        "question": "Это бесплатно?",
+        "answer": [
+          "Каждый план начинается с 3-дневного бесплатного пробного периода — все функции, без ограничений. Выберите любой план, попробуйте без риска и отмените в любое время.",
+          "После пробного периода планы начинаются всего от $3/мес. Никаких скрытых платежей, никаких неожиданных счетов. Что видите — то и платите.",
+          "Конкуренты берут ~$8/мес плюс дополнительную плату за API-ключи. Voca включает всё в одну простую подписку."
+        ]
+      },
+      {
+        "question": "Можно отменить в любое время?",
+        "answer": [
+          "Да. Отмените когда захотите — текущий период остаётся активным, а следующий месяц просто не продлевается.",
+          "Никаких штрафов за отмену, никаких скрытых условий, никаких навязчивых процедур удержания. Один клик — и готово.",
+          "Всё опен-сорс. Вы можете проверить наш биллинг, код и обещания — ничего не скрыто."
+        ]
+      },
+      {
+        "question": "Чем Voca отличается?",
+        "answer": [
+          "Подавление фонового шума для реальных условий — особенно полезно для разработчиков в шумных помещениях.",
+          "ИИ, который распознаёт имена функций, термины кода и техническую терминологию, транскрибируя их правильно, а не угадывая.",
+          "Умная автовставка: исправленная транскрипция появляется прямо там, где был курсор. Без копирования-вставки, без переключения приложений.",
+          "ИИ не просто транскрибирует — он улучшает ваш стиль письма, исправляет грамматику и делает текст чище, чем то, что вы на самом деле сказали."
+        ]
+      },
+      {
+        "question": "Что такое Режим разработчика?",
+        "answer": [
+          "Режим разработчика — это настройка тона, созданная специально для программистов. При включении ИИ Voca распознаёт термины кода, имена функций, названия библиотек и техническую терминологию — и транскрибирует их правильно, а не как обычные слова.",
+          "Скажите «реакт юз стейт хук» — и он напишет «React useState hook». Скажите «навбар компонент» — и он напишет «navbar component».",
+          "В сочетании с подавлением фонового шума он предназначен для разработчиков, которые диктуют комментарии к коду, документацию или сообщения, работая в реальных условиях."
+        ]
+      },
+      {
+        "question": "Какие языки поддерживаются?",
+        "answer": [
+          "Более 35 языков для распознавания речи через движки Deepgram и Groq.",
+          "Более 100 языков для ИИ-перевода с контролем тона — формальный, неформальный или режим разработчика.",
+          "Режим разработчика автоматически распознаёт термины кода и техническую терминологию, сохраняя их на английском и естественно переводя остальное."
+        ]
+      },
+      {
+        "question": "Где хранятся мои данные?",
+        "answer": [
+          "Ваши данные обрабатываются на наших серверах с приоритетом конфиденциальности. Voca полностью опен-сорс — вы можете проверить каждую строку кода.",
+          "Если вы не хотите, чтобы что-либо хранилось на наших серверах, просто отключите это в Настройках. Ваши записи и транскрипции не будут сохранены — решение полностью за вами.",
+          "Никакого отслеживания, никакой аналитики, никакой продажи данных. Точка."
+        ]
+      },
+      {
+        "question": "Работает ли без интернета?",
+        "answer": [
+          "Voca требует подключения к интернету. Ваше аудио отправляется на наши серверы, где мы обрабатываем его для лучшего качества по минимальной цене.",
+          "Наш облачный конвейер включает подавление фонового шума, ИИ-коррекцию, транскрипцию с пониманием кода и умный перевод — более быстрые и точные результаты, чем любое локальное решение."
+        ]
+      },
+      {
+        "question": "Будут ли добавлены новые функции?",
+        "answer": [
+          "Безусловно. Voca — это активно развивающаяся платформа. Мы регулярно выпускаем обновления с новыми функциями, улучшениями и оптимизациями.",
+          "Ваши отзывы напрямую формируют нашу дорожную карту. Нашли баг или есть запрос на функцию? Свяжитесь с нами через email или социальные ссылки в футере — мы читаем всё.",
+          "Оформляя подписку, вы получаете не только сегодняшний продукт. Вы получаете каждое будущее обновление без дополнительной платы."
+        ]
+      }
+    ]
+  },
   "finalCta": {
     "heading": "Нажмите клавишу, говорите, готово.",
     "description": "Одна горячая клавиша для транскрипции, исправления, перевода и вставки — не покидая приложение. Опен-сорс, работает на macOS и Windows.",
@@ -74,6 +145,7 @@
   "footer": {
     "features": "Функции",
     "pricing": "Цены",
+    "faq": "FAQ",
     "copyright": "© {{year}} Voca. Все права защищены."
   },
   "notFound": {
