--- a/packages/web/src/i18n/locales/zh.json
+++ b/packages/web/src/i18n/locales/zh.json
@@ -65,6 +65,77 @@
     ],
     "downloadToGet": "下载获取 {{plan}}"
   },
+  "faq": {
+    "heading": "常见问题",
+    "description": "关于 Voca 你需要知道的一切。",
+    "cta": "没找到你的问题？",
+    "items": [
+      {
+        "question": "是免费的吗？",
+        "answer": [
+          "每个计划都有 3 天免费试用 — 全部功能，无限制。选择任意计划，零风险试用，随时取消。",
+          "试用结束后，计划仅从 $3/月起。无隐藏费用，无意外收费。所见即所付。",
+          "竞争对手收取约 $8/月外加额外的 API 密钥费用。Voca 将一切包含在一个简单的订阅中。"
+        ]
+      },
+      {
+        "question": "可以随时取消吗？",
+        "answer": [
+          "可以。随时取消 — 当前周期保持有效，下个月不会续费。",
+          "无取消费用，无隐藏条款，无繁琐流程。一键搞定。",
+          "一切都是开源的。你可以验证我们的计费、代码和承诺 — 没有任何隐藏。"
+        ]
+      },
+      {
+        "question": "Voca 有什么不同？",
+        "answer": [
+          "为真实环境打造的背景噪音消除 — 特别适合在嘈杂环境中编码的开发者。",
+          "AI 能识别函数名、代码术语和技术术语，准确转录而非猜测。",
+          "智能自动粘贴：修正后的转录直接出现在光标位置。无需复制粘贴，无需切换应用。",
+          "AI 不只是转录 — 它还改善你的写作风格、修正语法，让你的文本比实际说出的更精炼。"
+        ]
+      },
+      {
+        "question": "什么是开发者模式？",
+        "answer": [
+          "开发者模式是专为软件工程师设计的语调设置。启用后，Voca 的 AI 会识别代码术语、函数名、库名和技术术语 — 并正确转录它们，而不是当作普通词汇处理。",
+          "说 \"reakt use state hook\"，它会写成 \"React useState hook\"。说 \"nahbar component\"，它会写成 \"navbar component\"。",
+          "配合背景噪音消除功能，专为在真实环境中工作时口述代码注释、文档或消息的开发者而设计。"
+        ]
+      },
+      {
+        "question": "支持哪些语言？",
+        "answer": [
+          "通过 Deepgram 和 Groq 引擎支持 35+ 种语言的语音识别。",
+          "通过 AI 驱动的翻译支持 100+ 种语言，含语调控制 — 正式、随意或开发者模式。",
+          "开发者模式自动识别代码术语和技术术语，保持英文不变，同时自然翻译其余内容。"
+        ]
+      },
+      {
+        "question": "我的数据存储在哪里？",
+        "answer": [
+          "你的数据在我们的服务器上以隐私优先的方式处理。Voca 完全开源 — 你可以检查每一行代码。",
+          "如果你不想在我们的服务器上存储任何数据，只需在设置中关闭即可。你的录音和转录不会被保存 — 完全由你决定。",
+          "无追踪、无分析、不出售数据。就是这么简单。"
+        ]
+      },
+      {
+        "question": "可以离线使用吗？",
+        "answer": [
+          "Voca 需要互联网连接。你的音频会发送到我们的服务器，在那里以最低成本提供最佳质量的处理。",
+          "我们的云端流水线包括背景噪音消除、AI 纠正、代码感知转录和智能翻译 — 比任何本地方案更快、更准确。"
+        ]
+      },
+      {
+        "question": "会添加新功能吗？",
+        "answer": [
+          "当然。Voca 是一个活跃开发的平台 — 我们定期发布包含新功能、改进和优化的更新。",
+          "你的反馈直接影响我们的路线图。发现了 bug 或有功能需求？通过页脚的邮件或社交链接联系我们 — 我们会阅读每一条消息。",
+          "订阅时，你得到的不只是今天的产品。你将免费获得未来的每一次更新。"
+        ]
+      }
+    ]
+  },
   "finalCta": {
     "heading": "按下按键，说话，搞定。",
     "description": "一个快捷键完成转录、纠正、翻译和粘贴 — 无需离开当前应用。开源，支持 macOS 和 Windows。",
@@ -74,6 +145,7 @@
   "footer": {
     "features": "功能",
     "pricing": "价格",
+    "faq": "常见问题",
     "copyright": "© {{year}} Voca. 保留所有权利。"
   },
   "notFound": {
